# DungeonMirundal

./: .coverage  .coveragerc  .gitignore  .ticket-config.yaml  CLAUDE.md  Claude.md  conftest.py  debug_dungeon_selection.py  debug_ui_state_check.py  main.py  project_structure.md  pyproject.toml  pytest.ini  simple_test.py  test_all_facilities.py  test_character_creation_cleanup.py  test_character_creation_editbox_bug.py  test_character_creation_name_input_fix.py  test_character_creation_name_input_persistence.py  test_character_status_bar.py  test_class_change.py  test_close_window_fix.py  test_deep_menu_navigation_fixes.py  test_dialog_close_issue.py  test_dungeon_entrance_back_issue.py  test_dungeon_entrance_fix.py  test_dungeon_entrance_selection.py  test_dungeon_movement.py  test_dungeon_renderer_fixes.py  test_dungeon_selection_directly.py  test_dungeon_selection_fix.py  test_dungeon_selection_menu_structure.py  test_dungeon_transition.py  test_event_flow_debug.py  test_facility_integration.py  test_facility_shortcuts.py  test_inn_integration_fix.py  test_inn_menu_navigation.py  test_inn_refactoring.py  test_inn_tavern_rumors_fix.py  (+22 more)
config/: bosses_backup.yaml  characters.yaml  dungeons.yaml  game_config.yaml  items.yaml  items_new.yaml  monsters.yaml  spells.yaml  ui_theme.json  user_settings.yaml
docs/: bugs.md  change_spec.md  development_plan.md  feature_menu_structure.md  font_memo.md  font_system_guide.md  font_troubleshooting_checklist.md  how_to_debug_game.md  how_to_plan_refactoring_by_similarity.md  how_to_talk_with_gemini.md  menu_architecture.md  (+22 more)
(+704 files in other folders)
