[project]
name = "dungeon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coverage>=7.9.1",
    "fastapi>=0.115.14",
    "fastapi-mcp>=0.3.4",
    "pillow>=11.2.1",
    "pygame>=2.5.0",
    "pygame-gui>=0.6.14",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "pyyaml>=6.0.2",
    "uvicorn>=0.35.0",
]
