[project]
name = "dungeon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "coverage>=7.9.1",
    "fastapi>=0.115.14",
    "fastapi-mcp>=0.3.4",
    "pillow>=11.2.1",
    "psutil>=7.0.0",
    # Platform-specific pygame dependencies
    "pygame>=2.6.0,<2.7; sys_platform == 'linux'",
    "pygame-ce>=2.5.0,<2.6; sys_platform == 'darwin'",
    "pygame>=2.5.0,<2.6; sys_platform == 'win32'",
    "pygame-gui>=0.6.9,<0.7",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]
